tests/snapshots/parse__kr_function.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(sum)\n  Function(mul)\n  Function(main)\n\n"
stderr: ""
status: 0
