tests/snapshots/parse__mutual_recursion.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(is_even)\n  Function(is_odd)\n  Function(main)\n  Function(is_even)\n  Function(is_odd)\n\n"
stderr: ""
status: 0
