tests/snapshots/parse__offsetof_first.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  StructDef(Data)\n  Function(main)\n\n"
stderr: ""
status: 0
