tests/snapshots/parse__pointer.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(assert)\n  Function(printf)\n  Function(sprintf)\n  Function(vsprintf)\n  Function(strcmp)\n  Function(strncmp)\n  Function(memcmp)\n  Function(exit)\n  Function(vsprintf)\n  Function(strlen)\n  Function(memcpy)\n  Function(memset)\n  Function(main)\n\n"
stderr: ""
status: 0
