tests/snapshots/parse__pointers_arrays.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(sum)\n  Function(main)\n\n"
stderr: ""
status: 0
