tests/snapshots/parse__signal_header.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  TypedefDef(sig_atomic_t)\n  TypedefDef(__sighandler_t)\n  Function(raise)\n  Function(signal)\n  Function(main)\n\n"
stderr: ""
status: 0
