tests/snapshots/parse__sizeof.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  StructDef(Mix)\n  Function(main)\n\n"
stderr: ""
status: 0
