tests/snapshots/parse__static_global.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(internal_var)\n  Function(main)\n\n"
stderr: ""
status: 0
