tests/snapshots/parse__static_local.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(counter)\n  Function(main)\n\n"
stderr: ""
status: 0
